<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:fitsSystemWindows="true"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/main.collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|snap"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            >

            <ImageView
                android:id="@+id/main.backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                android:src="@drawable/office"
                android:contentDescription="@string/app_name"
                app:layout_collapseMode="parallax"
                />

            <android.support.v7.widget.Toolbar
                android:id="@+id/main.toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="false"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <com.raizlabs.universalfontcomponents.widget.UniversalFontTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_1_title"
                        android:textAlignment="center"
                        android:textColor="#ffc400"
                        android:textSize="20sp"
                        android:layout_marginTop="5dp"
                        app:customFont="DroidBold.ttf" />

                    <ImageView
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/isotrl" />

                    <ayar.oktay.advancedtextview.AdvancedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/content_1_para1"
                        android:textColor="#000"
                        android:textSize="14sp"
                        app:justifyText="true"
                        app:fontFile="RobotoMedium.ttf"
                        />

                    <ayar.oktay.advancedtextview.AdvancedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/content_1_para2"
                        android:textColor="#000"
                        android:textSize="14sp"
                        android:layout_marginTop="5dp"
                        app:justifyText="true"
                        app:fontFile="RobotoMedium.ttf"
                        />

                    <ayar.oktay.advancedtextview.AdvancedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/content_1_para3"
                        android:textColor="#000"
                        android:textSize="14sp"
                        android:layout_marginTop="5dp"
                        app:justifyText="true"
                        app:fontFile="RobotoMedium.ttf"
                        />

                    <ayar.oktay.advancedtextview.AdvancedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/content_1_para4"
                        android:textColor="#000"
                        android:textSize="14sp"
                        android:layout_marginTop="5dp"
                        app:justifyText="true"
                        app:fontFile="RobotoMedium.ttf"
                        />

                    <com.raizlabs.universalfontcomponents.widget.UniversalFontTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_vision"
                        android:textAlignment="center"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:layout_marginTop="10dp"
                        app:customFont="DroidBold.ttf" />

                    <ayar.oktay.advancedtextview.AdvancedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/content_vision"
                        android:textColor="#000"
                        android:textSize="14sp"
                        android:textAlignment="center"
                        android:layout_marginTop="5dp"
                        app:fontFile="RobotoMedium.ttf"
                        />

                    <com.raizlabs.universalfontcomponents.widget.UniversalFontTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_mission"
                        android:textAlignment="center"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:layout_marginTop="10dp"
                        app:customFont="DroidBold.ttf" />

                    <ayar.oktay.advancedtextview.AdvancedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/content_mission_1"
                        android:textColor="#000"
                        android:textSize="14sp"
                        android:textAlignment="center"
                        android:layout_marginTop="5dp"
                        app:fontFile="RobotoMedium.ttf"
                        />

                    <ayar.oktay.advancedtextview.AdvancedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/content_mission_2"
                        android:textColor="#000"
                        android:textSize="14sp"
                        android:textAlignment="center"
                        android:layout_marginTop="5dp"
                        app:fontFile="RobotoMedium.ttf"
                        />

                    <com.raizlabs.universalfontcomponents.widget.UniversalFontTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_motto"
                        android:textAlignment="center"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:layout_marginTop="10dp"
                        app:customFont="DroidBold.ttf" />

                    <ayar.oktay.advancedtextview.AdvancedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/content_motto"
                        android:textColor="#000"
                        android:textSize="14sp"
                        android:textAlignment="center"
                        android:layout_marginTop="5dp"
                        app:fontFile="RobotoMedium.ttf"
                        />

                    <com.raizlabs.universalfontcomponents.widget.UniversalFontTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_2_title"
                        android:textAlignment="center"
                        android:textColor="#ffc400"
                        android:textSize="20sp"
                        android:layout_marginTop="15dp"
                        app:customFont="DroidBold.ttf" />

                    <ayar.oktay.advancedtextview.AdvancedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/content_2_para1"
                        android:textColor="#000"
                        android:textSize="14sp"
                        android:layout_marginTop="5dp"
                        app:justifyText="true"
                        app:fontFile="RobotoMedium.ttf"
                        />

                    <com.raizlabs.universalfontcomponents.widget.UniversalFontTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_3_title"
                        android:textAlignment="center"
                        android:textColor="#ffc400"
                        android:textSize="20sp"
                        android:layout_marginTop="15dp"
                        app:customFont="DroidBold.ttf" />

                    <ayar.oktay.advancedtextview.AdvancedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/content_3_para1"
                        android:textColor="#000"
                        android:textSize="14sp"
                        android:layout_marginTop="5dp"
                        app:justifyText="true"
                        app:fontFile="RobotoMedium.ttf"
                        />

                    <ayar.oktay.advancedtextview.AdvancedTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/content_3_para2"
                        android:textColor="#000"
                        android:textSize="14sp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        app:justifyText="true"
                        app:fontFile="RobotoMedium.ttf"
                        />
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <io.github.yavski.fabspeeddial.FabSpeedDial
        android:id="@+id/about_fab"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="end|bottom"
        app:fabGravity="bottom_end"
        app:fabMenu="@menu/about"
        app:fabDrawable="@drawable/ic_apps"
        app:fabBackgroundTint="@color/bootstrap_brand_warning"
        app:miniFabBackgroundTintList="@array/fab_menu_item_colors"
        app:fabDrawableTint="@android:color/white"
        app:miniFabDrawableTint="@android:color/white"
        app:miniFabTitleTextColorList="@array/fab_menu_item_colors"/>
</android.support.design.widget.CoordinatorLayout>