<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    app:cardElevation="3dp"
    app:cardCornerRadius="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <ImageView
            android:id="@+id/recycler_courierdpodk_icpackage"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_package" />

        <com.raizlabs.universalfontcomponents.widget.UniversalFontTextView
            android:id="@+id/recycler_courierdpodk_txtdpodknumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/dpodk_number"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:customFont="UbuntuRegular.ttf"
            app:layout_constraintStart_toEndOf="@+id/recycler_courierdpodk_icpackage"
            app:layout_constraintTop_toTopOf="parent" />

        <com.raizlabs.universalfontcomponents.widget.UniversalFontTextView
            android:id="@+id/recycler_courierdpodk_txtjamtgl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:text="@string/schedule_shipment"
            android:textColor="@color/colorContent"
            android:textSize="14sp"
            app:customFont="UbuntuRegular.ttf"
            app:layout_constraintStart_toEndOf="@+id/recycler_courierdpodk_icpackage"
            app:layout_constraintTop_toBottomOf="@+id/recycler_courierdpodk_txtdpodknumber" />

        <com.raizlabs.universalfontcomponents.widget.UniversalFontTextView
            android:id="@+id/recycler_courierdpodk_txtrute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/rute"
            android:textColor="@color/colorEinvButton"
            android:textSize="14sp"
            app:customFont="UbuntuMedium.ttf"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/recycler_courierdpodk_imgitem"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerInParent="true"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/about_1_title"
            android:src="@drawable/ic_navigate_next_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>