<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="true"
    app:layout_goneMarginBottom="4dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/promo_item_container"
            android:layout_width="0dp"
            android:layout_height="105dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/promo_item_imgproduct"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/bumperbanner" />
        </RelativeLayout>

        <com.raizlabs.universalfontcomponents.widget.UniversalFontTextView
            android:id="@+id/promo_item_txtnameproduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/product_name"
            android:textColor="@android:color/black"
            android:textSize="10sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:customFont="RobotoMedium.ttf"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/promo_item_container" />

        <com.raizlabs.universalfontcomponents.widget.UniversalFontTextView
            android:id="@+id/promo_item_txtbrandproduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/another_label"
            android:paddingStart="7dp"
            android:paddingTop="3dp"
            android:paddingEnd="7dp"
            android:paddingBottom="2dp"
            android:text="@string/nikon"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:customFont="RobotoMedium.ttf"
            app:layout_constraintBottom_toBottomOf="@+id/promo_item_container"
            app:layout_constraintStart_toStartOf="parent" />

        <com.raizlabs.universalfontcomponents.widget.UniversalFontTextView
            android:id="@+id/promo_item_txtdiscproduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/disc_label"
            android:paddingStart="7dp"
            android:paddingTop="3dp"
            android:paddingEnd="7dp"
            android:paddingBottom="3dp"
            android:text="@string/_10"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:customFont="RobotoMedium.ttf"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.raizlabs.universalfontcomponents.widget.UniversalFontTextView
            android:id="@+id/promo_item_txtstockproduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/stok_tersedia"
            android:textColor="@color/colorToolbar"
            android:textSize="10sp"
            android:visibility="gone"
            app:customFont="RobotoMedium.ttf"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/promo_item_txtnameproduct"
            app:layout_constraintVertical_bias="0.0" />

        <com.raizlabs.universalfontcomponents.widget.UniversalFontTextView
            android:id="@+id/promo_item_txtpriceproduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="0dp"
            android:text="@string/price"
            android:textColor="@color/colorContent"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/promo_item_txtstockproduct"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/promo_item_txtidproduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_id"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/promo_item_container" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>